xrpl-wasm-stdlib/xrpl-macros/tests/currency/fail_invalid_chars.stderr
error: Invalid currency: U$D
 --> tests/currency/fail_invalid_chars.rs:5:15
  |
5 |     currency!("U$D");
  |               ^^^^^
