xrpl-wasm-stdlib/xrpl-macros/tests/currency/fail_invalid_chars.rs
use xrpl_macros::currency;

// Standard 3-char codes must be alphanumeric; punctuation is rejected.
fn main() {
    currency!("U$D");
}
